--- a/src/component/nav/nav.css
+++ b/src/component/nav/nav.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 3rem 0.2rem 3rem;
+    padding: 1rem 6rem;
 }
 .nav-content{
     display: flex;
